--- a/index.html
+++ b/index.html
@@ -96,24 +96,11 @@
                 <div class="content_row">
                     <a class="large_button" href="https://www.instagram.com/ic_dramsoc/" target="_blank" rel="noopener">
                         <img aria-hidden="true" class="icon" src="static/images/symbols/instagram.png">
-                        Instagram
-                    </a>
-                    <a class="large_button" href="https://www.facebook.com/dramsoc" target="_blank" rel="noopener">
-                        <img aria-hidden="true" class="icon" src="static/images/symbols/facebook.png">
-                        Facebook
-                    </a>
-                    <a class="large_button" href="https://www.tiktok.com/@ic_dramsoc" target="_blank" rel="noopener">
-                        <img aria-hidden="true" class="icon" src="static/images/symbols/tiktok.png">
-                        TikTok
-                    </a>
-                    <div class="break"></div>
-                    <a class="large_button" href="https://outlook.office365.com/calendar/published/67f72540d8e24159bd72cf807716dc86@imperial.ac.uk/82262ebe17ff4419a97649dd90fd85ed6387450589728315788/calendar.html" target="_blank" rel="noopener">
-                        <img aria-hidden="true" class="icon" src="static/images/symbols/calendar.png">
-                        Upcoming Events
+                        Upcoming Shows & Events
                     </a>
                     <button type="button" class="large_button" onclick="scroll_to('talk')">
                         <img aria-hidden="true" class="icon" src="static/images/symbols/envelope.png">
-                        Join Our Mailing List
+                        Join Our Mailing Lists
                     </a>
                 </div>
             </div>
@@ -124,7 +111,7 @@
             <div class="section_column narrow_content">
                 <h1>Acting</h1>
                 <p>DramSoc puts on at least one full-length play in our theatre, the <button type="button" onclick="scroll_to('uch')">Union Concert Hall</button> per term, as well as a number of other plays in different venues around the College and further afield. Usually our main shows have casts of between 15 and 20 people and we welcome auditions from anyone with any amount of experience, so if you’re thinking of getting involved, keep an eye out for audition posters and notices on our website, social media, and our mailing lists at the start and end of every term.</p>
-                <button type="button" class="large_button" onclick="scroll_to('talk')">
+                <a class="large_button" href="https://mailman.ic.ac.uk/mailman/listinfo/icds-actor-talk" target="_blank" rel="noopener">
                     <img aria-hidden="true" class="icon" src="static/images/symbols/envelope.png">
                     Join Our Mailing List
                 </a>
@@ -162,7 +149,7 @@
                 <h1>Tech</h1>
                 <p>There are plenty of roles within DramSoc even for those who prefer to stay off the stage! All technical aspects of our shows, and of shows staged by the <a href="https://mtsoc.co.uk" target="_blank" rel="noopener">Musical Theatre Society</a>, are provided by DramSoc Crew. We design and build the set, then dress it and light it. We design sound effects and rig sound equipment. And we make sure the cast look their best with the right costumes, props and make-up.</p>
                 <p>On top of this, we provide sound, lighting and rigging for live events hosted by the Union and other Clubs & Societies, such as the annual Summer Ball, talent shows, live music events and club nights. We would love you to be around to help out! For more information or to get involved, email our Technical Director, and join the Crew Talk mailing list.</p>
-                <button type="button" class="large_button" onclick="scroll_to('talk')">
+                <a class="large_button" href="https://mailman.ic.ac.uk/mailman/listinfo/icds-crew-talk" target="_blank" rel="noopener">
                     <img aria-hidden="true" class="icon" src="static/images/symbols/envelope.png">
                     Join Our Mailing List
                 </a>
@@ -188,8 +175,8 @@
             <div class="section_column narrow_content">
                 <h1>Union Concert Hall</h1>
                 <p>DramSoc's primary venue is the Imperial College Union Union Concert Hall (or UCH). This was built in the 1950s, opening, along with the rest of the upper part of the Union building, in 1956. DramSoc is responsible for the maintenance of the technical aspects of the hall, and it contains a full-featured stage and technical installation, albeit limited by the shape of the building.</p>
-                <a href="https://maps.app.goo.gl/wFEc4Y3T66jhwqZj7" class="large_button" target="_blank" rel="noopener">
-                    <img aria-hidden="true" class="icon" src="static/images/symbols/arrow.triangle.turn.up.right.diamond.png">
+                <a href="https://maps.app.goo.gl/q1pVpMQwYnLEgYEdA" class="large_button" target="_blank" rel="noopener">
+                    <img aria-hidden="true" class="icon" src="static/images/symbols/arrow.trianglehead.turn.up.right.circle.svg">
                     Directions
                 </a>
             </div>
