add ticketing policy

--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
                         <a href="/static/files/bye_laws.pdf" target="_blank">Bye Laws</a>
                         <a href="/static/files/data_protection_policy.pdf" target="_blank">Data Protection</a>
                         <a href="/static/files/debtor_policy.pdf" target="_blank">Debtor Policy</a>
+                        <a href="/policy" target="_blank">Ticketing Policy</a>
                         <a href="/static/files/privacy_notice.pdf" target="_blank">Privacy Notice</a>
                     </div>
                     <div class="content_column">
