updated ticketing policy

--- a/policy.html
+++ b/policy.html
@@ -24,7 +24,7 @@
     
             <div>
                 <h2>Access</h2>
-                <p>Everyone entering our theatre spaces must have a valid ticket regardless of age.</p>
+                <p>Everyone entering our theatre spaces must have a valid ticket regardless of age. Please bring with you a valid form of ID and student ID where possible to show to Imperial College Union staff if necessary to gain entry.</p>
             </div>
     
             <div>
