wyrd sisters feature

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
         <meta charset="utf-8">
         <title>DramSoc | Imperial College Dramatic Society</title>
         
-		<link rel="icon" href="static/images/logos/dramsoc.jpg">
-		<link rel="apple-touch-icon" href="static/images/logos/dramsoc.jpg">
+		<link rel="icon" href="/static/images/logos/dramsoc.jpg">
+		<link rel="apple-touch-icon" href="/static/images/logos/dramsoc.jpg">
         <meta name="viewport" content="width=device-width, viewport-fit=cover">
-        <meta property="og:image" content="static/images/general/summer_ball1.jpg">
+        <meta property="og:image" content="/static/images/general/summer_ball1.jpg">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:700,400">
 
         <!-- The purpose of the query '?v=' on style.css and script.js is to force browsers to not use a cached version of the files and to fetch the newest version -->
         <!-- Increment v every time you want to flush the cache of everyone's browsers (eg. if you make a change to the website which works fine locally but causes strange errors when viewed on dramsoc.org) -->
-        <link rel="stylesheet" href="static/style.css?v=2">
-        <script src="static/script.js?v=1"></script>
+        <link rel="stylesheet" href="/static/style.css?v=2">
+        <script src="/static/script.js?v=1"></script>
 
         <!-- Stop the page from scrolling to the anchor on load -->
         <script>
@@ -34,7 +34,7 @@
         <div id="nav">
             <div id="navbar" class="regular_content">
                 <button aria-hidden="true" type="button" class="nav_button" onclick="scroll_to('intro')">
-                    <img class="small_logo" aria-hidden="true" src="static/images/logos/dramsoc_white_200.png">
+                    <img class="small_logo" aria-hidden="true" src="/static/images/logos/dramsoc_white_200.png">
                 </button>
                 <button aria-hidden="true" type="button" id="nav_menu" class="nav_button invert" onclick="toggle_nav_links()">
                     <img aria-hidden="true" id="nav_menu_img" src="/static/images/symbols/line.3.horizontal.png">
@@ -67,24 +67,23 @@
         <div id="intro" class="background_section">
             <div id="player"></div>
             <div id="dramsoc">
-                <img aria-hidden="true" id="dramsoc_logo" src="static/images/logos/dramsoc_white.png">
+                <img aria-hidden="true" id="dramsoc_logo" src="/static/images/logos/dramsoc_white.png">
                 <h1 id="dramsoc_title">Imperial College Dramatic Society</h1>
             </div>
             <button type="button" aria-hidden="true" id="down_button" onclick="scroll_to('about')">
-                <img aria-hidden="true" id="down_button_img" class="invert" src="static/images/symbols/chevron.down.png">
+                <img aria-hidden="true" id="down_button_img" class="invert" src="/static/images/symbols/chevron.down.png">
             </button>
         </div>
 
         <!-- FEATURE -->
         <!-- This section can be used to advertise upcoming shows -->
         <!-- It displays the show's poster and a link to buy tickets -->
-        <!-- To change the image, search for #feature in style.css and change the background-image url -->
-        <!-- <div id="feature" class="section">
+        <div id="feature" class="section" style="background-image: url('/static/images/posters/wyrd_sisters.jpg');">
             <a id="feature_button" class="large_button" href="/fringe" target="_blank">
-                <img aria-hidden="true" class="icon" src="static/images/symbols/ticket.png">
+                <img aria-hidden="true" class="icon" src="/static/images/symbols/ticket.png">
                 Tickets
             </a>
-        </div> -->
+        </div>
 
         <!-- ABOUT -->
         <div id="about" class="section plain_section">
@@ -95,11 +94,11 @@
                 <p>We stage 2 plays per term, with recent productions including Mike Bartlett's 'Earthquakes in London', and 'Compost', a 5-star piece of original theatre produced at Edinburgh Fringe. We produce a range of work written by students, and established playwrights. This really is the place to be if you love theatre!</p>
                 <div class="content_row">
                     <a class="large_button" href="https://www.instagram.com/ic_dramsoc/" target="_blank" rel="noopener">
-                        <img aria-hidden="true" class="icon" src="static/images/symbols/instagram.png">
+                        <img aria-hidden="true" class="icon" src="/static/images/symbols/instagram.png">
                         Upcoming Shows & Events
                     </a>
                     <button type="button" class="large_button" onclick="scroll_to('talk')">
-                        <img aria-hidden="true" class="icon" src="static/images/symbols/envelope.png">
+                        <img aria-hidden="true" class="icon" src="/static/images/symbols/envelope.png">
                         Join Our Mailing Lists
                     </a>
                 </div>
@@ -112,7 +111,7 @@
                 <h1>Acting</h1>
                 <p>DramSoc puts on at least one full-length play in our theatre, the <button type="button" onclick="scroll_to('uch')">Union Concert Hall</button> per term, as well as a number of other plays in different venues around the College and further afield. Usually our main shows have casts of between 15 and 20 people and we welcome auditions from anyone with any amount of experience, so if you’re thinking of getting involved, keep an eye out for audition posters and notices on our website, social media, and our mailing lists at the start and end of every term.</p>
                 <a class="large_button" href="https://mailman.ic.ac.uk/mailman/listinfo/icds-actor-talk" target="_blank" rel="noopener">
-                    <img aria-hidden="true" class="icon" src="static/images/symbols/envelope.png">
+                    <img aria-hidden="true" class="icon" src="/static/images/symbols/envelope.png">
                     Join Our Mailing List
                 </a>
             </div>
@@ -136,7 +135,7 @@
                     </ul>
                     <p>A play proposal with all of these things considered is much stronger than one without, but none of these things are mandatory for a proposal. If you have an idea for a proposal, but are unsure about any aspect of the proposal or proposals process, please email the DramSoc President or Acting Director. Additionally, anyone may come to the meeting to observe the process.</p>
                     <a href="mailto:acting@dramsoc.org" class="large_button">
-                        <img aria-hidden="true" class="icon" src="static/images/symbols/envelope.png">
+                        <img aria-hidden="true" class="icon" src="/static/images/symbols/envelope.png">
                         Acting Director
                     </a>
                 </div>
@@ -150,7 +149,7 @@
                 <p>There are plenty of roles within DramSoc even for those who prefer to stay off the stage! All technical aspects of our shows, and of shows staged by the <a href="https://mtsoc.co.uk" target="_blank" rel="noopener">Musical Theatre Society</a>, are provided by DramSoc Crew. We design and build the set, then dress it and light it. We design sound effects and rig sound equipment. And we make sure the cast look their best with the right costumes, props and make-up.</p>
                 <p>On top of this, we provide sound, lighting and rigging for live events hosted by the Union and other Clubs & Societies, such as the annual Summer Ball, talent shows, live music events and club nights. We would love you to be around to help out! For more information or to get involved, email our Technical Director, and join the Crew Talk mailing list.</p>
                 <a class="large_button" href="https://mailman.ic.ac.uk/mailman/listinfo/icds-crew-talk" target="_blank" rel="noopener">
-                    <img aria-hidden="true" class="icon" src="static/images/symbols/envelope.png">
+                    <img aria-hidden="true" class="icon" src="/static/images/symbols/envelope.png">
                     Join Our Mailing List
                 </a>
             </div>
@@ -164,7 +163,7 @@
                 <p>Our experience in production management and design ranges from the large-scale annual Summer Ball, including the lighting and sound in the Great Hall and the Queen's Tower Rooms and all the set and design features, down to small societal events in Metric. As such we believe that you will find our help and advice invaluable whilst planning your event, regardless of its size or complexity.</p>
                 <p>Even if you do not use DramSoc's services, we will be more than happy to advise and assist in getting alternative quotes. However, we are quite confident that we care more about the success of your event than a hire company would, and we can deliver more for your money, too. In any case, please try to get in contact with us as early as possible, as the more time we have, the better we can help you.</p>
                 <a href="mailto:techdir@dramsoc.org" class="large_button">
-                    <img aria-hidden="true" class="icon" src="static/images/symbols/envelope.png">
+                    <img aria-hidden="true" class="icon" src="/static/images/symbols/envelope.png">
                     Technical Director
                 </a>
             </div>
@@ -176,7 +175,7 @@
                 <h1>Union Concert Hall</h1>
                 <p>DramSoc's primary venue is the Imperial College Union Union Concert Hall (or UCH). This was built in the 1950s, opening, along with the rest of the upper part of the Union building, in 1956. DramSoc is responsible for the maintenance of the technical aspects of the hall, and it contains a full-featured stage and technical installation, albeit limited by the shape of the building.</p>
                 <a href="https://maps.app.goo.gl/q1pVpMQwYnLEgYEdA" class="large_button" target="_blank" rel="noopener">
-                    <img aria-hidden="true" class="icon" src="static/images/symbols/arrow.trianglehead.turn.up.right.circle.svg">
+                    <img aria-hidden="true" class="icon" src="/static/images/symbols/arrow.trianglehead.turn.up.right.circle.svg">
                     Directions
                 </a>
             </div>
@@ -200,7 +199,7 @@
                         <h2>DramSoc Talk</h2>
                         <p>This is the main society mailing list. All society members should be on this list. If you want information about our plays and society events, then this is the list to join. Traffic is minimal; a weekly newsletter and information about our plays are the only things that go to this list.</p>
                         <a class="large_button" href="https://mailman.ic.ac.uk/mailman/listinfo/dramsoc-talk" target="_blank" rel="noopener">
-                            <img aria-hidden="true" class="icon" src="static/images/symbols/envelope.png">
+                            <img aria-hidden="true" class="icon" src="/static/images/symbols/envelope.png">
                             Subscribe
                         </a>
                     </div>
@@ -208,7 +207,7 @@
                         <h2>Actor Talk</h2>
                         <p>This list is for conversation between DramSoc's community of actors, and those interested in acting. It will be the primary means of contact for workshops and members will be the first to know about auditions for upcoming plays.</p>
                         <a class="large_button" href="https://mailman.ic.ac.uk/mailman/listinfo/icds-actor-talk" target="_blank" rel="noopener">
-                            <img aria-hidden="true" class="icon" src="static/images/symbols/envelope.png">
+                            <img aria-hidden="true" class="icon" src="/static/images/symbols/envelope.png">
                             Subscribe
                         </a>
                     </div>
@@ -216,7 +215,7 @@
                         <h2>Crew Talk</h2>
                         <p>This list is for crew members, and is the main way we distribute crew information, event and show dates, crew requests and crew calls. All crew members should be on this list! Unless explicitly stated otherwise, anyone can show up for any call that interests them, regardless of skill level or prior experience; we find the best way to learn is to join our experienced crew and learn from them!</p>
                         <a class="large_button" href="https://mailman.ic.ac.uk/mailman/listinfo/icds-crew-talk" target="_blank" rel="noopener">
-                            <img aria-hidden="true" class="icon" src="static/images/symbols/envelope.png">
+                            <img aria-hidden="true" class="icon" src="/static/images/symbols/envelope.png">
                             Subscribe
                         </a>
                     </div>
@@ -231,42 +230,42 @@
                 <div class="content_column">
                     <div class="content_row contact_option">
                         <a href="mailto:president@dramsoc.org" class="large_button">
-                            <img aria-hidden="true" class="icon" src="static/images/symbols/envelope.png">
+                            <img aria-hidden="true" class="icon" src="/static/images/symbols/envelope.png">
                             President
                         </a>
                         <p>General queries.</p>
                     </div>
                     <div class="content_row contact_option">
                         <a href="mailto:treasurer@dramsoc.org" class="large_button">
-                            <img aria-hidden="true" class="icon" src="static/images/symbols/envelope.png">
+                            <img aria-hidden="true" class="icon" src="/static/images/symbols/envelope.png">
                             Treasurer
                         </a>
                         <p>Financial and invoicing queries. For quotes contact the Technical Director.</p>
                     </div>
                     <div class="content_row contact_option">
                         <a href="mailto:techdir@dramsoc.org" class="large_button">
-                            <img aria-hidden="true" class="icon" src="static/images/symbols/envelope.png">
+                            <img aria-hidden="true" class="icon" src="/static/images/symbols/envelope.png">
                             Technical Director
                         </a>
                         <p>Queries related to technical services and hire.</p>
                     </div>
                     <div class="content_row contact_option">
                         <a href="mailto:acting@dramsoc.org" class="large_button">
-                            <img aria-hidden="true" class="icon" src="static/images/symbols/envelope.png">
+                            <img aria-hidden="true" class="icon" src="/static/images/symbols/envelope.png">
                             Acting Director
                         </a>
                         <p>Queries related to plays, play proposals, auditions and acting workshops.</p>
                     </div>
                     <div class="content_row contact_option">
                         <a href="mailto:sysadmin@dramsoc.org" class="large_button">
-                            <img aria-hidden="true" class="icon" src="static/images/symbols/envelope.png">
+                            <img aria-hidden="true" class="icon" src="/static/images/symbols/envelope.png">
                             System Administrator
                         </a>
                         <p>Queries related to this website.</p>
                     </div>
                     <div class="content_row contact_option">
                         <a href="mailto:complaints@dramsoc.org" class="large_button">
-                            <img aria-hidden="true" class="icon" src="static/images/symbols/envelope.png">
+                            <img aria-hidden="true" class="icon" src="/static/images/symbols/envelope.png">
                             Complaints
                         </a>
                         <p>Concerns and complaints.</p>
@@ -281,18 +280,18 @@
                 <div class="content_grid" id="footer_grid">
                     <div class="content_column">
                         <button aria-hidden="true" type="button" onclick="scroll_to('intro')">
-                            <img class="small_logo" aria-hidden="true" src="static/images/logos/dramsoc_white_200.png">
+                            <img class="small_logo" aria-hidden="true" src="/static/images/logos/dramsoc_white_200.png">
                         </button>
                         <p>Est. 1907</p>
                         <div class="content_row">
                             <a title="Instagram" href="https://www.instagram.com/ic_dramsoc/" target="_blank" rel="noopener">
-                                <img aria-hidden="true" class="icon" src="static/images/symbols/instagram.png">
+                                <img aria-hidden="true" class="icon" src="/static/images/symbols/instagram.png">
                             </a>
                             <a title="Facebook" href="https://www.facebook.com/dramsoc" target="_blank" rel="noopener">
-                                <img aria-hidden="true" class="icon" src="static/images/symbols/facebook.png">
+                                <img aria-hidden="true" class="icon" src="/static/images/symbols/facebook.png">
                             </a>
                             <a title="TikTok" href="https://www.tiktok.com/@ic_dramsoc" target="_blank" rel="noopener">
-                                <img aria-hidden="true" class="icon" src="static/images/symbols/tiktok.png">
+                                <img aria-hidden="true" class="icon" src="/static/images/symbols/tiktok.png">
                             </a>
                         </div>
                     </div>
@@ -327,13 +326,13 @@
                     </div>
                     <div class="content_column">
                         <a title="Imperial College London" href="https://www.imperial.ac.uk" target="_blank" rel="noopener">
-                            <img aria-hidden="true" class="invert" id="imperial_logo" src="static/images/logos/imperial.png">
+                            <img aria-hidden="true" class="invert" id="imperial_logo" src="/static/images/logos/imperial.png">
                         </a>
                         <a title="Imperial College Union" href="https://www.imperialcollegeunion.org" target="_blank" rel="noopener">
-                            <img aria-hidden="true" class="invert" id="union_logo" src="static/images/logos/union.png">
+                            <img aria-hidden="true" class="invert" id="union_logo" src="/static/images/logos/union.png">
                         </a>
                         <a title="The Comus Club" href="https://www.comus.org.uk" target="_blank" rel="noopener">
-                            <img aria-hidden="true" class="invert" id="comus_logo" src="static/images/logos/comus.png">
+                            <img aria-hidden="true" class="invert" id="comus_logo" src="/static/images/logos/comus.png">
                         </a>
                     </div>
                 </div>
