--- a/policy.html
+++ b/policy.html
@@ -4,12 +4,12 @@
         <meta name="viewport" content="width=device-width, viewport-fit=cover">
         <title>Theatre Ticketing Policy | DramSoc</title>
         
-		<link rel="icon" href="static/images/logos/dramsoc.jpg">
-		<link rel="apple-touch-icon" href="static/images/logos/dramsoc.jpg">
-        <meta property="og:image" content="static/images/general/summer_ball1.jpg">
+		<link rel="icon" href="/static/images/logos/dramsoc.jpg">
+		<link rel="apple-touch-icon" href="/static/images/logos/dramsoc.jpg">
+        <meta property="og:image" content="/static/images/general/summer_ball1.jpg">
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:700,400">
-        <link rel="stylesheet" href="static/style.css?v=2">
+        <link rel="stylesheet" href="/static/style.css?v=2">
         <style>
             body.section {
                 text-align: left;
