fix: feature tickets url

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <!-- This section can be used to advertise upcoming shows -->
         <!-- It displays the show's poster and a link to buy tickets -->
         <div id="feature" class="section" style="background-image: url('/static/images/posters/wyrd_sisters.jpg');">
-            <a id="feature_button" class="large_button" href="/fringe" target="_blank">
+            <a id="feature_button" class="large_button" href="/tickets" target="_blank">
                 <img aria-hidden="true" class="icon" src="/static/images/symbols/ticket.png">
                 Tickets
             </a>
