feat: update ticketing policy

--- a/policy.html
+++ b/policy.html
@@ -24,12 +24,12 @@
     
             <div>
                 <h2>Access</h2>
-                <p>Everyone entering our theatre spaces must have a valid ticket regardless of age. Please bring with you a valid form of ID and student ID where possible to show to Imperial College Union staff if necessary to gain entry.</p>
+                <p>Everyone entering our theatre spaces must have a valid ticket regardless of age. Please bring with you a valid form of ID and student ID where possible to show to Imperial College Union staff if necessary to gain entry to the Union.</p>
             </div>
     
             <div>
                 <h2>Concessions</h2>
-                <p>Concessions are available for all full-time students. We will ask you to show a valid student ID when you show your tickets at the doors. There will also be occasional performances with no reduced rates.</p>
+                <p>Where applicable, student concession tickets are available for all full-time students. We will ask you to show a valid student ID when you show your tickets at the doors. There will also be occasional performances with no reduced rates.</p>
             </div>
 
             <div>
