--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
         <meta property="og:image" content="/static/images/general/summer_ball1.jpg">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:700,400">
 
-        <!-- The purpose of the query '?v=' on style.css and script.js is to force browsers to not use a cached version of the files and to fetch the newest version -->
-        <!-- Increment v every time you want to flush the cache of everyone's browsers (eg. if you make a change to the website which works fine locally but causes strange errors when viewed on dramsoc.org) -->
-        <link rel="stylesheet" href="/static/style.css?v=2">
-        <script src="/static/script.js?v=1"></script>
+        <!-- Hash #x used to flush caches -->
+        <link rel="stylesheet" href="/static/style.css#2">
+        <script src="/static/script.js#1"></script>
 
-        <!-- Stop the page from scrolling to the anchor on load -->
+        <!-- Stops page from scrolling to the anchor on load -->
         <!-- This is a workaround needed to get #talk to scroll to mailing lists after recent shows have loaded -->
         <script>
             hash = document.location.hash
@@ -77,8 +76,8 @@
         </div>
 
         <!-- FEATURE -->
-        <!-- This section can be used to advertise upcoming shows -->
-        <!-- It displays the show's poster and a link to buy tickets -->
+        <!-- Section to advertise upcoming shows -->
+        <!-- Just change background-image -->
         <!-- <div id="feature" class="section" style="background-image: url('/static/images/posters/moon.jpeg');">
             <a id="feature_button" class="large_button" href="/tickets" target="_blank">
                 <img aria-hidden="true" class="icon" src="/static/images/symbols/ticket.png">
@@ -122,7 +121,9 @@
         <div id="shows" class="section plain_section">
             <div class="section_column">
                 <h1>Recent Shows</h1>
-                <div id="shows_grid"></div>
+                <div id="shows_grid">
+                    <!-- Filled in by /static/script.js -->
+                </div>
                 <div class="section_column narrow_content">
                     <h1>Propose a Show</h1>
                     <p>DramSoc decides on each term's shows at a Play Proposals meeting (announced on the DramSoc mailing list) held near to the end of the previous term. A full play proposal includes:</p>
@@ -186,7 +187,9 @@
         <div id="committee" class="section plain_section">
             <div class="section_column regular_content">
                 <h1>Committee</h1>
-                <div id="committee_grid" class="content_grid"></div>
+                <div id="committee_grid" class="content_grid">
+                    <!-- Filled in by /static/script.js -->
+                </div>
             </div>
         </div>
 
