add committee period to title

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <!-- COMMITTEE -->
         <div id="committee" class="section plain_section">
             <div class="section_column regular_content">
-                <h1>Committee</h1>
+                <h1>Committee <span class="secondary">24-25</span></h1>
                 <div id="committee_grid" class="content_grid">
                     <!-- Filled in by /static/script.js -->
                 </div>
