add committee image fallback + refactor image loading

--- a/index.html
+++ b/index.html
@@ -186,9 +186,28 @@
         <!-- COMMITTEE -->
         <div id="committee" class="section plain_section">
             <div class="section_column regular_content">
-                <h1>Committee <span class="secondary">24-25</span></h1>
+                <h1>Committee <span class="secondary">25-26</span></h1>
                 <div id="committee_grid" class="content_grid">
                     <!-- Filled in by /static/script.js -->
+
+                    <!-- TEMPLATE FOR COMMITTEE MEMBER
+                    
+                    <div class="content_item">
+                        <div class="headshot">
+                            <svg viewBox="0 0 24 24">
+                                <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"></path>
+                            </svg>
+                            <div class="headshot-image" style="background-image:url(/static/images/committee/24/sophie.jpg);"></div>
+                        </div>
+                        <div>
+                            <h2>Committee Member</h2>
+                            <p class="committee_role">a role</p>
+                            <a href="mailto:no@dramsoc.org">no@dramsoc.org</a>
+                        </div>
+                    </div> 
+                    
+                    -->
+
                 </div>
             </div>
         </div>
