update mailing list links for mailman 3

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <div class="content_item">
                         <h2>DramSoc Talk</h2>
                         <p>This is the main society mailing list. All society members should be on this list. If you want information about our plays and society events, then this is the list to join. Traffic is minimal; a weekly newsletter and information about our plays are the only things that go to this list.</p>
-                        <a class="large_button" href="https://mailman.ic.ac.uk/mailman/listinfo/dramsoc-talk" target="_blank" rel="noopener">
+                        <a class="large_button" href="https://mailing-lists.imperial.ac.uk/mailman3/lists/dramsoc-talk.imperial.ac.uk/" target="_blank" rel="noopener">
                             <img aria-hidden="true" class="icon" src="/static/images/symbols/envelope.png">
                             Subscribe
                         </a>
@@ -229,7 +229,7 @@
                     <div class="content_item">
                         <h2>Actor Talk</h2>
                         <p>This list is for conversation between DramSoc's community of actors, and those interested in acting. It will be the primary means of contact for workshops and members will be the first to know about auditions for upcoming plays.</p>
-                        <a class="large_button" href="https://mailman.ic.ac.uk/mailman/listinfo/icds-actor-talk" target="_blank" rel="noopener">
+                        <a class="large_button" href="https://mailing-lists.imperial.ac.uk/mailman3/lists/icds-actor-talk.imperial.ac.uk/" target="_blank" rel="noopener">
                             <img aria-hidden="true" class="icon" src="/static/images/symbols/envelope.png">
                             Subscribe
                         </a>
@@ -237,7 +237,7 @@
                     <div class="content_item">
                         <h2>Crew Talk</h2>
                         <p>This list is for crew members, and is the main way we distribute crew information, event and show dates, crew requests and crew calls. All crew members should be on this list! Unless explicitly stated otherwise, anyone can show up for any call that interests them, regardless of skill level or prior experience; we find the best way to learn is to join our experienced crew and learn from them!</p>
-                        <a class="large_button" href="https://mailman.ic.ac.uk/mailman/listinfo/icds-crew-talk" target="_blank" rel="noopener">
+                        <a class="large_button" href="https://mailing-lists.imperial.ac.uk/mailman3/lists/icds-crew-talk.imperial.ac.uk/" target="_blank" rel="noopener">
                             <img aria-hidden="true" class="icon" src="/static/images/symbols/envelope.png">
                             Subscribe
                         </a>
