add autumn shows

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
         <!-- FEATURE -->
         <!-- Section to advertise upcoming shows -->
         <!-- Just change background-image -->
-        <div id="feature" class="section" style="background-image: url('/static/images/posters/treasure-island-temp.jpg');">
+        <!-- <div id="feature" class="section" style="background-image: url('/static/images/posters/treasure-island-temp.jpg');">
             <a id="feature_button" class="large_button" href="/tickets" target="_blank">
                 <img aria-hidden="true" class="icon" src="/static/images/symbols/ticket.png">
                 Tickets
             </a>
-        </div>
+        </div> -->
 
         <!-- ABOUT -->
         <div id="about" class="section plain_section">
